--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flux-test",
   "version": "0.0.1",
-  "description": "Example Flux architecture.",
+  "description": "Example Flux architecture based on Facebook todo-mvc sample",
   "repository": "https://github.com/tom-mats/flux_test",
   "main": "js/app.js",
   "dependencies": {
@@ -12,12 +12,12 @@
     "react": "^0.12.0"
   },
   "devDependencies": {
-    "browserify": "^6.2.0",
-    "envify": "^3.0.0",
-    "jest-cli": "^0.4.3",
-    "reactify": "^0.15.2",
-    "uglify-js": "^2.4.15",
-    "watchify": "^2.1.1"
+    "browserify": "*",
+    "envify": "*",
+    "jest-cli": "*",
+    "reactify": "*",
+    "uglify-js": "*",
+    "watchify": "*"
   },
   "scripts": {
     "start": "watchify -o js/bundle.js -v -d js/app.js",
